--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^8.0|^8.1",
+        "illuminate/contracts": "^9.0",
         "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^9.0"
+        "spatie/laravel-translatable": "^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
-        "itsgoingd/clockwork": "^5.1",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
         "nunomaduro/phpinsights": "^2.4",
