--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,9 @@
     "scripts": {
         "analyse": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+        "test-coverage": "XDEBUG_MODE=coverage ./vendor/bin/pest --coverage",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "release": "composer format && composer analyse && composer test"
     },
     "config": {
         "sort-packages": true,
