--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^9.0",
+        "illuminate/contracts": "^9.0|^10.0",
         "spatie/laravel-model-info": "^1.4",
         "spatie/laravel-package-tools": "^1.9.2",
         "spatie/laravel-translatable": "^6.0"
