--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^9.0|^10.0",
-        "spatie/laravel-model-info": "^1.4",
-        "spatie/laravel-package-tools": "^1.9.2",
-        "spatie/laravel-translatable": "^6.0"
+        "illuminate/contracts": "^9.0|^10.0|^11.0",
+        "spatie/laravel-model-info": "^1.4|^2.0",
+        "spatie/laravel-package-tools": "^1.9.2|^2.0",
+        "spatie/laravel-translatable": "^6.0|^7.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
