--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,14 @@
         "larastan/larastan": "^2.0|^3.0",
         "nunomaduro/collision": "^6.0|^7.0|^8.0",
         "nunomaduro/phpinsights": "^2.4",
-        "orchestra/testbench": "^7.0|^8.0|^9.0",
-        "pestphp/pest": "^2.0|^3.0",
-        "pestphp/pest-plugin-faker": "^2.0|^3.0",
-        "pestphp/pest-plugin-laravel": "^2.0|^3.0",
+        "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
+        "pestphp/pest": "^2.0|^3.0|^4.0",
+        "pestphp/pest-plugin-faker": "^2.0|^3.0|^4.0",
+        "pestphp/pest-plugin-laravel": "^2.0|^3.0|^4.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0|^2.0",
         "phpstan/phpstan-phpunit": "^1.0|^2.0",
-        "phpunit/phpunit": "^10.0|^11.0",
+        "phpunit/phpunit": "^10.0|^11.0|^12.0",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
