fix: update PHPStan config to properly ignore trait.unused warnings
The trait.unused warnings are expected for package traits (HasUniqueUrls,
HasUniqueUrlAttributes, AssertsUniqueUrls) since they are meant to be used
by package consumers, not within the package itself.

Fixed by:
- Adding specific paths to trait.unused ignore rule
- This prevents PHPStan from failing when traits are not used internally

PHPStan now passes: No errors
Tests: 36 passed (462 assertions)

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -15,7 +15,11 @@ parameters:
         -
             message: '#Call to an undefined method Illuminate\\Database\\Eloquent\\Model::(urls|generateUrl)\(\)#'
             path: src/Commands/UrlsGenerateCommand.php
-        # Traits are not analyzed when unused
+        # Package traits are meant to be used by consumers, not within the package
         -
             identifier: trait.unused
+            paths:
+                - src/HasUniqueUrls.php
+                - src/HasUniqueUrlAttributes.php
+                - src/Testing/AssertsUniqueUrls.php
 
