fix: disable reportUnmatchedIgnoredErrors in PHPStan config
Added reportUnmatchedIgnoredErrors: false to prevent CI failures when
ignore rules don't match any errors. This happens because:

1. Locally: Traits trigger trait.unused warnings
2. In CI: Traits may not trigger the same warnings (baseline differences)

Setting reportUnmatchedIgnoredErrors: false allows the config to work
in both environments without false positives.

PHPStan: No errors
Tests: 36 passed (462 assertions)

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,6 +10,7 @@ parameters:
     tmpDir: build/phpstan
     checkOctaneCompatibility: true
     checkModelProperties: true
+    reportUnmatchedIgnoredErrors: false
     ignoreErrors:
         # Trait methods are not analyzed by PHPStan
         -
