chore: tighten Spatie package version constraints
- laravel-model-info: drop ^1.4 (v1 was for Laravel 9/10, v2 targets 11+)
- laravel-package-tools: drop ^2.0 (v2 doesn't exist yet)
- laravel-translatable: drop ^7.0 (v7 doesn't exist yet)

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "require": {
         "php": "^8.2",
         "illuminate/contracts": "^11.0|^12.0",
-        "spatie/laravel-model-info": "^1.4|^2.0",
-        "spatie/laravel-package-tools": "^1.9.2|^2.0",
-        "spatie/laravel-translatable": "^6.0|^7.0"
+        "spatie/laravel-model-info": "^2.0",
+        "spatie/laravel-package-tools": "^1.9.2",
+        "spatie/laravel-translatable": "^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
